# overtelord9000

./: .gitignore  CMakeLists.txt  overtelord9000.kdev4
src/: .utils.cpp.kate-swp  main.cpp  utils.cpp  utils.h
src/IRC/: IRCClient.cpp  IRCClient.h
src/discord/: Discordbot.cpp  Discordbot.h  bot.cpp
src/matrix/: Matrixbot.cpp  Matrixbot.h  bot.cpp  bot.h
src/utilities/: utils.cpp  utils.h  wizard.cpp  wizard.h
src/web/: webreq.cpp  webreq.h
src/websocket/: websocketserver.cpp  websocketserver.h
